--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button class="operator">+</button>
             <button class="decimal">.</button>
             <button class="number">0</button>
-            <button class="equals">=</button>
+            <button class="equals"><span>=</span></button>
         </div>
     </div>
     <script src="script.js"></script>
